feat: added email error & support translation

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -8,6 +8,9 @@
 		"LOG_OFF": "LOG OFF",
 		"ACCOUNT": "ACCOUNT"
 	},
+	"ERROR_MESSAGE": {
+		"EMAIL_ERROR_MESSAGE": "Your email has invalid format"
+	},
 	"LABEL": {
 		"USER_NAME": "User name"
 	},
