--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -9,7 +9,8 @@
 		"ACCOUNT": "Мой профиль"
 	},
 	"ERROR_MESSAGE":{
-		"EMAIL_ERROR_MESSAGE": "Aдрес электронной почты имеет неверный формат"
+		"EMAIL_ERROR_MESSAGE": "Aдрес электронной почты имеет неверный формат",
+		"PASSWORD_ERROR_MESSAGE": "Пароль должен состоять из 6-18 символов, включая цифры, символы, прописные и строчные буквы"
 	},
 	"LABEL": {
 		"USER_NAME": "Имя пользователя"
