--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -15,5 +15,9 @@
 	},
 	"FOOTER": {
 		"ALL_RIGHTS_RESERVED": "All rights reserved."
+	},
+	"LANDING-PAGE": {
+		"TITLE": "Welcome to Learninja!",
+		"TEXT": "Join the platform and train your skills to become a true ninja in your expertise!"
 	}
 }
