--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -15,5 +15,9 @@
 	},
 	"FOOTER": {
 		"ALL_RIGHTS_RESERVED": "Все права защищены."
+	},
+	"LANDING-PAGE": {
+		"TITLE": "Добро пожаловать на Learninja!",
+		"TEXT": "Присоединяйтесь к платформе и тренируйте свои навыки, чтобы стать настоящим ниндзя в своем мастерстве!"
 	}
 }
