feat: added upload photo

--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -19,5 +19,12 @@
 	"LANDING-PAGE": {
 		"TITLE": "Добро пожаловать на Learninja!",
 		"TEXT": "Присоединяйтесь к платформе и тренируйте свои навыки, чтобы стать настоящим ниндзя в своем мастерстве!"
+	},
+	"USER-PROFILE": {
+		"ACCOUNT_SETTINGS": "Настройки аккаунта",
+		"PERSONAL_INFO": "Личная информация",
+		"PASSWORD": "Пароль",
+		"SOCIAL_LINKS": "Социальные сети",
+		"UPLOAD_PHOTO": "Загрузить фотографию"
 	}
 }
