--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -19,5 +19,12 @@
 	"LANDING-PAGE": {
 		"TITLE": "Welcome to Learninja!",
 		"TEXT": "Join the platform and train your skills to become a true ninja in your expertise!"
+	},
+	"USER-PROFILE": {
+		"ACCOUNT_SETTINGS": "Account Settings",
+		"PERSONAL_INFO": "Personal Information",
+		"PASSWORD": "Password",
+		"SOCIAL_LINKS": "Social Links",
+		"UPLOAD_PHOTO": "Upload photo"
 	}
 }
