--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -25,6 +25,10 @@
 		"PERSONAL_INFO": "Личная информация",
 		"PASSWORD": "Пароль",
 		"SOCIAL_LINKS": "Социальные сети",
-		"UPLOAD_PHOTO": "Загрузить фотографию"
+		"UPLOAD_PHOTO": "Загрузить фотографию",
+		"FIRST_NAME": "Имя",
+		"LAST_NAME": "Фамилия",
+		"EMAIL": "Email",
+		"PHONE": "Телефон"
 	}
 }
