feat: added icons and new forms

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -29,6 +29,11 @@
 		"FIRST_NAME": "First Name",
 		"LAST_NAME": "Last Name",
 		"EMAIL": "Email",
-		"PHONE": "Phone"
+		"PHONE": "Phone",
+		"SAVE_PROFILE": "SAVE PROFILE",
+		"OLD_PASSWORD": "Old password",
+		"NEW_PASSWORD": "New password",
+		"CHANGE": "CHANGE",
+		"UPDATE": "UPDATE"
 	}
 }
