--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -34,7 +34,9 @@
 		"OLD_PASSWORD": "Старый пароль",
 		"NEW_PASSWORD": "Новый пароль",
 		"CHANGE": "ИЗМЕНИТЬ",
-		"UPDATE": "ОБНОВИТЬ"
+		"UPDATE": "ОБНОВИТЬ",
+		"DELETE": "Удалить",
+		"EDIT": "Редактировать фотографию"
 	}
 	
 }
