Redesign user profile (#102)
* feat: added breadcrumb, store for breadcrumb

* feat: fix error from linter

* feat: fixed tests

* feat: added upload photo

* feat: changed width of input

* feat: added icons and new forms

* feat: added form, formcontrol

* feat: deleted event  from form

* feat: deleted space

* feat: removed magic strings

* feat: removed whitespace

* feat: changed  passing width for  input

* feat: removed additional ` quotes

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -19,5 +19,23 @@
 	"LANDING-PAGE": {
 		"TITLE": "Welcome to Learninja!",
 		"TEXT": "Join the platform and train your skills to become a true ninja in your expertise!"
+	},
+	"USER-PROFILE": {
+		"ACCOUNT_SETTINGS": "Account Settings",
+		"PERSONAL_INFO": "Personal Information",
+		"PASSWORD": "Password",
+		"SOCIAL_LINKS": "Social Links",
+		"UPLOAD_PHOTO": "Upload photo",
+		"FIRST_NAME": "First Name",
+		"LAST_NAME": "Last Name",
+		"EMAIL": "Email",
+		"PHONE": "Phone",
+		"SAVE_PROFILE": "SAVE PROFILE",
+		"OLD_PASSWORD": "Old password",
+		"NEW_PASSWORD": "New password",
+		"CHANGE": "CHANGE",
+		"UPDATE": "UPDATE",
+		"DELETE": "Delete",
+		"EDIT": "Edit Avatar"
 	}
 }
