--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -19,5 +19,24 @@
 	"LANDING-PAGE": {
 		"TITLE": "Добро пожаловать на Learninja!",
 		"TEXT": "Присоединяйтесь к платформе и тренируйте свои навыки, чтобы стать настоящим ниндзя в своем мастерстве!"
+	},
+	"USER-PROFILE": {
+		"ACCOUNT_SETTINGS": "Настройки аккаунта",
+		"PERSONAL_INFO": "Личная информация",
+		"PASSWORD": "Пароль",
+		"SOCIAL_LINKS": "Социальные сети",
+		"UPLOAD_PHOTO": "Загрузить фотографию",
+		"FIRST_NAME": "Имя",
+		"LAST_NAME": "Фамилия",
+		"EMAIL": "Email",
+		"PHONE": "Телефон",
+		"SAVE_PROFILE": "СОХРАНИТЬ ИЗМЕНЕНИЯ",
+		"OLD_PASSWORD": "Старый пароль",
+		"NEW_PASSWORD": "Новый пароль",
+		"CHANGE": "ИЗМЕНИТЬ",
+		"UPDATE": "ОБНОВИТЬ",
+		"DELETE": "Удалить",
+		"EDIT": "Редактировать фотографию"
 	}
+	
 }
