--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -8,11 +8,23 @@
 		"LOG_OFF": "Выйти",
 		"ACCOUNT": "Мой профиль",
 		"LANGUAGE-RU": "Русский",
-		"LANGUAGE-EN": "Английский"
+		"LANGUAGE-EN": "Английский",
+		"DELETE_EVENT": "УДАЛИТЬ МЕТРОПРИЯТИЕ",
+		"SAVE_AS_DRAFT": "СОХРАНИТЬ В ЧЕРНОВИКИ",
+		"PUBLISH": "ОПУБЛИКОВАТЬ"
 	},
 	"LABEL": {
 		"USER_NAME": "Имя пользователя",
-		"EVENT_NAME": "Event name"
+		"EVENT_NAME": "Название мероприятия",
+		"EVENT_TITLE": "Название мероприятия",
+		"START_DATE": "День старта",
+		"START_TIME": "Начало",
+		"END_DATE": "День завершения",
+		"END_TIME": "Конец",
+		"SHORT_SUMMARY": "Краткое описание (необязательно)",
+		"CONTINUOUS_EVENT": "Непрерывное мероприятие",
+		"PRIVATE_EVENT": "Конфиденциальное мероприятие",
+		"CKEDITOR": "Введите детали для нового мероприятия"
 	},
 	"PLACEHOLDER": {
 		"EVENT_NAME": "например, Моё событие"
@@ -41,6 +53,15 @@
 		"UPDATE": "ОБНОВИТЬ",
 		"DELETE": "Удалить",
 		"EDIT": "Редактировать фотографию"
+	},
+	"EVENT-CREATION": {
+		"GENERAL_TABS": "ОСНОВНОЕ",
+		"TASKS_TABS": "ЗАДАЧИ",
+		"INVITATIONS_TABS": "ПРИГЛАШЕНИЯ",
+		"TITLE_GENERAL": "Основная информация"
+	},
+	"TOOLTIP": {
+		"FOR_IS_CONTINUOUS": "Информация о мероприятии",
+		"FOR_IS_PRIVATE": "Информация о мероприятии"
 	}
-	
 }
