--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -69,6 +69,15 @@
 		"INVITATIONS_TABS": "INVITATIONS",
 		"TITLE_GENERAL": "General Information"
 	},
+  "TASK-CREATION": {
+    "TASK_TYPE_LABEL": "Task type",
+    "TASKS_TYPES": {
+         "CODING": "Coding task",
+         "SINGLE": "Single answer",
+         "MULTIPLE": "Multiple answers",
+         "TEXT": "Text answer"
+    }
+  },
 	"TOOLTIP": {
 		"FOR_IS_CONTINUOUS": "Info about the action",
 		"FOR_IS_PRIVATE": "Info about the action"
