--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -77,5 +77,15 @@
 		"SIGN_IN_BTN": "Войти",
 		"PASSWORD": "Пароль",
 		"EMAIL": "Email"
+	},
+	"SIGN_UP": {
+		"NO_ACCOUNT": "Нет аккаунта?",
+		"SIGN_UP_BTN": "Войти в систему",
+		"CREATE_ACCOUNT": "Зарегистрироваться",
+		"OR": "ИЛИ",
+		"FORGOT_PASSWORD": "Забыли пароль?",
+		"SIGN_IN_BTN": "Войти",
+		"PASSWORD": "Пароль",
+		"EMAIL": "Email"
 	}
 }
