--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -74,7 +74,11 @@
     },
     "MENTOR_CHECK_LABEL": "Проверка ментором",
     "MAX_SCORE_PLACEHOLDER": "Максимальная оценка",
-    "TEXT_EDITOR_PLACEHOLDER": "Введите вопрос"
+    "TEXT_EDITOR_PLACEHOLDER": "Введите вопрос",
+    "LIST_HEADER_TITLE": "Задачи",
+    "ADD_NEW_OPTION_TITLE": "добавить опцию",
+    "MENTOR_CHECK_TOGGLE": "Проверка ментором",
+    "TASK_NAME_PLACEHOLDER": "Название задачи"
   },
 	"TOOLTIP": {
 		"FOR_IS_CONTINUOUS": "Информация о мероприятии",
