--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -79,7 +79,8 @@
     "ADD_NEW_OPTION_TITLE": "добавить опцию",
     "MENTOR_CHECK_TOGGLE": "Проверка ментором",
     "TASK_NAME_PLACEHOLDER": "Название задачи",
-    "EMPTY_TASKS_LIST": "Список задач пуст."
+    "EMPTY_TASKS_LIST": "Список задач пуст.",
+    "CODE_EDITOR_LABEL": "Раздел юнит тестов"
   },
 	"TOOLTIP": {
 		"FOR_IS_CONTINUOUS": "Информация о мероприятии",
