Redesign/sign in page (#111)
* feat: added validation for password & email (#70)

* feat: added button always enabled

* feat: added email error & support translation

* feat: added password error & support translation

* feat: sign in page redesign (#70)

* feat: removed comments (#70)

* feat: added afterViewChecked for containerComponent (#70)

* refactor: renamed sample, moved sign in (#70)

* feat: added style on input, recaptcha

* feat: added logo-dark,moved img from signin folder

* feat: added box-shadow

* feat: file formatted

* feat: file formatted

* feat: added action showElemnts to onDestroy

* feat: removed recaptcha

* feat: adjust specs

* feat: delete redundant changes

* feat: fix form layout

* feat: resolve conflicts

* feat: fix version

* feat: delete redundant code

* feat: fix password visibility

* feat: add until destroy for recaptchaV3Service

Co-authored-by: margarita-sh <margaritka1992@gmail.com>

--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -36,6 +36,16 @@
 	"FOOTER": {
 		"ALL_RIGHTS_RESERVED": "Все права защищены."
 	},
+	"SIGN_IN": {
+		"NO_ACCOUNT": "Нет аккаунта?",
+		"SIGN_UP_BTN": "Зарегистрироваться",
+		"WELCOME_BACK": "Добро пожаловать",
+		"OR": "ИЛИ",
+		"FORGOT_PASSWORD": "Забыли пароль?",
+		"SIGN_IN_BTN": "Войти",
+		"PASSWORD": "Пароль",
+		"EMAIL": "Email"
+	},
 	"LANDING-PAGE": {
 		"TITLE": "Добро пожаловать на Learninja!",
 		"TEXT": "Присоединяйтесь к платформе и тренируйте свои навыки, чтобы стать настоящим ниндзя в своем мастерстве!"
