--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -90,6 +90,7 @@
     "TEXT_EDITOR_PLACEHOLDER": "Введите вопрос",
     "LIST_HEADER_TITLE": "Задачи",
     "ADD_NEW_OPTION_TITLE": "добавить опцию",
+    "OPTIONS_LABEL": "Ответ",
     "MENTOR_CHECK_TOGGLE": "Проверка ментором",
     "TASK_NAME_PLACEHOLDER": "Название задачи",
     "EMPTY_TASKS_LIST": "Список задач пуст.",
