refactor: task creator

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -79,6 +79,7 @@
     "TEXT_EDITOR_PLACEHOLDER": "Enter question here",
     "LIST_HEADER_TITLE": "Tasks",
     "ADD_NEW_OPTION_TITLE": "add new option",
+    "OPTIONS_LABEL": "Option",
     "MENTOR_CHECK_TOGGLE": "Mentor check",
     "TASK_NAME_PLACEHOLDER": "Task name",
     "EMPTY_TASKS_LIST": "You don’t have any tasks yet.",
