fix: user dropdown

--- a/frontend/src/assets/i18n/en.json
+++ b/frontend/src/assets/i18n/en.json
@@ -5,8 +5,8 @@
 		"CREATE_EVENT": "Create Event",
 		"EVENTS": "Events",
 		"ADMINISTRATION": "Administration",
-		"LOG_OFF": "LOG OFF",
-		"ACCOUNT": "ACCOUNT",
+		"LOG_OFF": "Log out",
+		"ACCOUNT": "Account",
 		"LANGUAGE-RU": "Russian",
 		"LANGUAGE-EN": "English",
 		"CREATE": "CREATE",
