--- a/frontend/src/assets/i18n/ru.json
+++ b/frontend/src/assets/i18n/ru.json
@@ -9,7 +9,7 @@
 		"ACCOUNT": "Мой профиль",
 		"LANGUAGE-RU": "Русский",
 		"LANGUAGE-EN": "Английский",
-		"DELETE_EVENT": "УДАЛИТЬ МЕТРОПРИЯТИЕ",
+		"DELETE_EVENT": "УДАЛИТЬ МЕРОПРИЯТИЕ",
 		"SAVE_AS_DRAFT": "СОХРАНИТЬ В ЧЕРНОВИКИ",
 		"PUBLISH": "ОПУБЛИКОВАТЬ"
 	},
